Update everything and include UIR table
UIR table: User interface requirements table

--- a/Attachments/SRS/EndUserRequirements.tex
+++ b/Attachments/SRS/EndUserRequirements.tex
@@ -1,5 +1,5 @@
-\begin{table}[]
-\begin{tabular}{|l|l|l|}
+%\begin{table}[H]
+\begin{longtable}{|l|l|l|}
 \hline
    & Description                                                                                                                                                                & Purpose                                                                                                           \\ \hline
 1  & Register as a user / Login                                                                                                                                                 & Secure system access                                                                                              \\ \hline
@@ -20,5 +20,5 @@
 16 & \begin{tabular}[c]{@{}l@{}}Filter ticket lists by creation date/time\\ (i.e. all tickets after indicated time/date)\end{tabular}                                           & Ease of use and access                                                                                            \\ \hline
 17 & \begin{tabular}[c]{@{}l@{}}Sort ticket list by title, owner,\\ assignment, creation of recent update\\ date/time, ticket type, priority, status\\ and project\end{tabular} & Ease of use and access                                                                                            \\ \hline
 18 & Full text search of all relevant fields                                                                                                                                    & Ease of use and access                                                                                            \\ \hline
-\end{tabular}
-\end{table}
+\end{longtable}
+%\end{table}
